# World-Cup-Prediction

./: README.md  pyproject.toml  requirements.txt
Prediction WC/data/processed/: clean_matches.csv
Prediction WC/data/raw/: match_data_template.csv  world_cup_2026_groups.csv
Prediction WC/outputs/: model_evaluation.csv  most_likely_winner.csv  resume_bullet.md
Prediction WC/src/world_cup_predictor/: __init__.py  config.py  features.py  tournament.py  visualization.py
data/processed/: modeling_features.csv  world_cup_group_predictions.csv
data/raw/: team_ratings_2026.csv
models/: logistic_regression.joblib
notebooks/: world_cup_prediction.ipynb
outputs/: key_findings.md  team_stage_probabilities.csv
scripts/: run_pipeline.py
src/world_cup_predictor/: data.py  model.py  pipeline.py
tests/: test_tournament.py
web/: app.js  index.html  styles.css
